--- a/index.html
+++ b/index.html
@@ -16,36 +16,36 @@
         <h1>Hori<span class="seo">seo</span>n</h1>
 
         <div>
-
-            <ul>
-                <li>
-                    <a href="#search-engine-optimization">Search Engine Optimization</a>
-                </li>
-
-                <li>
-                    <a href="#online-reputation-management">Online Reputation Management</a>
-                </li>
-
-                <li>
-                    <a href="#social-media-marketing">Social Media Marketing</a>
-                </li>
-            </ul>
-
+            <nav>
+                <ul>
+                    <li>
+                        <a href="#search-engine-optimization">Search Engine Optimization section</a>
+                    </li>
+                    
+                    <li>
+                        <a href="#online-reputation-management">Online Reputation Management section</a>
+                    </li>
+                    
+                    <li>
+                        <a href="#social-media-marketing">Social Media Marketing section</a>
+                    </li>
+                </ul>
+            </nav>
         </div>
-    </section>
+        </section>
 
  <!-- hero refers to the section of the page that is devoted to the wide picture  -->
 
-    <section class="hero">
-        <img src="./assets/images/digital-marketing-meeting.jpg" alt="Meeting Image" height="900">
-    </section>
+    <figure class="hero">
+        <img src="./assets/images/digital-marketing-meeting.jpg" alt="Business Meeting Image" height="900">
+    </figure>
 
 <!-- The main articles of content that are listed down the page -->
     <section class="content">
 
         <!-- SEO sub text -->
-        <section id="search-engine-optimization" class="search-engine-optimization">
-            <img src="./assets/images/search-engine-optimization.jpg" class="float-left" width="300"/>
+        <section class="search-engine-optimization">
+            <img src="./assets/images/search-engine-optimization.jpg" alt="Search Engine Optimization image" class="float-left" width="300"/>
 
             <h2>Search Engine Optimization</h2>
             <p>
@@ -54,8 +54,8 @@
         </section>
 
         <!-- ORM sub text -->
-        <section id="online-reputation-management" class="online-reputation-management">
-            <img src="./assets/images/online-reputation-management.jpg" class="float-right" width="305"/>
+        <section class="online-reputation-management">
+            <img src="./assets/images/online-reputation-management.jpg" alt="Online Reputation Management image" class="float-right" width="305"/>
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
@@ -63,8 +63,8 @@
         </section>
 
         <!-- SMM sub text -->
-        <section id="social-media-marketing" class="social-media-marketing">
-            <img src="./assets/images/social-media-marketing.jpg" class="float-left" width="290"/>
+        <section class="social-media-marketing">
+            <img src="./assets/images/social-media-marketing.jpg" alt="Social Media Marketing image" class="float-left" width="290"/>
             <h2>Social Media Marketing</h2>
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
@@ -74,11 +74,11 @@
     </section>
 
     <!-- The section of the page that has information on the right side. -->
-    <section class="benefits">
+    <aside class="benefits">
 
         <section class="benefit-lead">
             <h3>Lead Generation</h3>
-            <img src="./assets/images/lead-generation.jpeg" height="150"/>
+            <img src="./assets/images/lead-generation.jpeg" alt="Benefit Lead icon" height="150"/>
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
@@ -86,7 +86,7 @@
 
         <section class="benefit-brand">
             <h3>Brand Awareness</h3>
-            <img src="./assets/images/brand-awareness.jpeg" height="150"/>
+            <img src="./assets/images/brand-awareness.jpeg" alt="Benefit Brand Icon" height="150"/>
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
@@ -94,13 +94,13 @@
 
         <section class="benefit-cost">
             <h3>Cost Management</h3>
-            <img src="./assets/images/cost-management.jpeg" height="150"/>
+            <img src="./assets/images/cost-management.jpeg" alt="Benefit Cost icon" height="150"/>
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
         </section>
 
-    </section>
+    </aside>
 
 
     <!-- The footer (end of the) -->
