--- a/index.html
+++ b/index.html
@@ -76,40 +76,40 @@
     <!-- The section of the page that has information on the right side. -->
     <aside class="benefits">
 
-        <section class="benefit-lead">
+        <article class="benefit-lead">
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.jpeg" alt="Benefit Lead icon" height="150"/>
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
-        </section>
+        </article>
 
-        <section class="benefit-brand">
+        <article class="benefit-brand">
             <h3>Brand Awareness</h3>
             <img src="./assets/images/brand-awareness.jpeg" alt="Benefit Brand Icon" height="150"/>
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
-        </section>
+        </article>
 
-        <section class="benefit-cost">
+        <article class="benefit-cost">
             <h3>Cost Management</h3>
             <img src="./assets/images/cost-management.jpeg" alt="Benefit Cost icon" height="150"/>
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
-        </section>
+        </article>
 
     </aside>
 
 
     <!-- The footer (end of the) -->
-    <section class="footer">
+    <footwe class="footer">
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
         </p>
-    </section>
+    </footer>
 
 </body>
 
