--- a/index.html
+++ b/index.html
@@ -5,80 +5,80 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css"/>
-    <title>website</title>
+    <!-- Changed title for the webpage -->
+    <title>Horiseon Website</title>
 </head>
 
 <body>
 
-<!-- This is the header. Contains the logo, SEO, ORM, SMM. -->
-    <section class="header">
+<!-- This is the header. Contains the logo, SEO, ORM, SMM. 
+    These are all anchor links to each individual article on the page-->
 
-        <h1>Hori<span class="seo">seo</span>n</h1>
+    <header>
 
-        <div>
+        <h1>Hori<abbr class="seo" title="Search Engine Optimization">seo</abbr>n</h1>
             <nav>
                 <ul>
                     <li>
-                        <a href="#search-engine-optimization">Search Engine Optimization section</a>
+                        <a href="#search-engine-optimization">Search Engine Optimization</a>
                     </li>
                     
                     <li>
-                        <a href="#online-reputation-management">Online Reputation Management section</a>
+                        <a href="#online-reputation-management">Online Reputation Management</a>
                     </li>
                     
                     <li>
-                        <a href="#social-media-marketing">Social Media Marketing section</a>
+                        <a href="#social-media-marketing">Social Media Marketing</a>
                     </li>
                 </ul>
             </nav>
-        </div>
-        </section>
+    </header>
 
  <!-- hero refers to the section of the page that is devoted to the wide picture  -->
 
     <figure class="hero">
-        <img src="./assets/images/digital-marketing-meeting.jpg" alt="Business Meeting Image" height="900">
+        <img src="./assets/images/digital-marketing-meeting.jpg" alt="Business Meeting Image" />
     </figure>
 
 <!-- The main articles of content that are listed down the page -->
     <section class="content">
 
         <!-- SEO sub text -->
-        <section class="search-engine-optimization">
-            <img src="./assets/images/search-engine-optimization.jpg" alt="Search Engine Optimization image" class="float-left" width="300"/>
+        <article>
+            <img id="search-engine-optimization" src="./assets/images/search-engine-optimization.jpg" alt="Search Engine Optimization image" class="float-left" />
 
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
-        </section>
+        </article>
 
         <!-- ORM sub text -->
-        <section class="online-reputation-management">
-            <img src="./assets/images/online-reputation-management.jpg" alt="Online Reputation Management image" class="float-right" width="305"/>
+        <article>
+            <img id="online-reputation-management" src="./assets/images/online-reputation-management.jpg" alt="Online Reputation Management image" class="float-right" />
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
-        </section>
+        </article>
 
         <!-- SMM sub text -->
-        <section class="social-media-marketing">
-            <img src="./assets/images/social-media-marketing.jpg" alt="Social Media Marketing image" class="float-left" width="290"/>
+        <article>
+            <img id="social-media-marketing" src="./assets/images/social-media-marketing.jpg" alt="Social Media Marketing image" class="float-left" />
             <h2>Social Media Marketing</h2>
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
             </p>
-        </section>
+        </article>
 
     </section>
 
-    <!-- The section of the page that has information on the right side. -->
+    <!-- The section of the page that has information on the right side. With images -->
     <aside class="benefits">
 
         <article class="benefit-lead">
             <h3>Lead Generation</h3>
-            <img src="./assets/images/lead-generation.jpeg" alt="Benefit Lead icon" height="150"/>
+            <img src="./assets/images/lead-generation.jpg" alt="Benefit Lead icon" />
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
@@ -86,7 +86,7 @@
 
         <article class="benefit-brand">
             <h3>Brand Awareness</h3>
-            <img src="./assets/images/brand-awareness.jpeg" alt="Benefit Brand Icon" height="150"/>
+            <img src="./assets/images/brand-awareness.jpg" alt="Benefit Brand Icon" />
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
@@ -94,7 +94,7 @@
 
         <article class="benefit-cost">
             <h3>Cost Management</h3>
-            <img src="./assets/images/cost-management.jpeg" alt="Benefit Cost icon" height="150"/>
+            <img src="./assets/images/cost-management.jpg" alt="Benefit Cost icon" />
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
@@ -103,7 +103,7 @@
     </aside>
 
 
-    <!-- The footer (end of the) -->
+    <!-- The footer of the page -->
     <footwe class="footer">
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
